added new styles, news controller

--- a/assets/templates/login.html
+++ b/assets/templates/login.html
@@ -1,40 +1,39 @@
-<div class="container">
-	<div class="row main">
-		<div class="panel-heading">
-	       <div class="panel-title text-center">
-	       		<h1 class="title">Login</h1>
-	       		<hr />
-	       	</div>
-	    </div> 
-		<div class="main-login main-center">
-			<form class="form-horizontal" method="post" action="#">
+<div class="myContainer container">
+  <div class="row">
 
-				<div class="form-group">
-					<label for="email" class="cols-sm-2 control-label">Your Email</label>
-					<div class="cols-sm-10">
-						<div class="input-group">
-							<span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-							<input type="text" ng-model="ctr.email" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
-						</div>
-					</div>
-				</div>
+    <header class="panel-heading">
+      <h1 class="title">Welcome back. Login to access</h1>
+    </header>
 
-				<div class="form-group">
-					<label for="password" class="cols-sm-2 control-label">Password</label>
-					<div class="cols-sm-10">
-						<div class="input-group">
-							<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-							<input type="password" ng-model="ctr.password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
-						</div>
-					</div>
-				</div>
+    <form class="loginForm" method="post" action="#">
 
-				
+      <div class="form-group">
+        <label for="email" class="cols-sm-2 control-label">Your Email</label>
+        <div class="cols-sm-10">
+          <div class="input-group">
+            <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+            <input type="text" ng-model="ctr.email" class="form-control" name="email" id="email"  placeholder="Email" tabindex="1"/>
+          </div>
+        </div>
+      </div>
 
-				<div class="form-group ">
-					<button type="button" ng-click="login()" class="btn btn-primary btn-lg btn-block login-button">Login</button>
-				</div>
-			</form>
-		</div>
-	</div>
+      <div class="form-group">
+        <label for="password" class="cols-sm-2 control-label">Password</label>
+        <div class="cols-sm-10">
+          <div class="input-group">
+            <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+            <input type="password" ng-model="ctr.password" class="form-control" name="password" id="password"  placeholder="Password" tabindex="2"/>
+          </div>
+        </div>
+      </div>
+
+      <button type="button" ng-click="login()" class="btnLogin btn btn-lg btn-block" tabindex="3">Login</button>
+
+      <footer class="footerCase">
+        <span>Don't have an account? </span>
+        <a class="link-login" ui-sref="app.register">Get started</a>
+      </footer>
+
+    </form>
+  </div>
 </div>
