implemented creation and listing sources

--- a/assets/templates/news.tpl.html
+++ b/assets/templates/news.tpl.html
@@ -1,10 +1,35 @@
 <div>
-	<div ng-repeat="article in news">
-		<h3>{{article.title}}</h3>
-		<h5>{{article.description}}</h5>
-		<div>
-			<span ng-repeat="tag in article.tags" class="btn btn-default">{{tag.name}}</span>
-		</div>
-		<hr />
-	</div>
+  <button ng-click="ctr.refreshNews()">Refresh</button>
 </div>
+<div class="newsChannel" ng-repeat="article in ctr.articles">
+
+    <div class="itemContent col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
+      <h2 class="itemTitle">
+        <a rel="external" class="itemLink" href="{{article.link}}" target="_blank">{{article.title}}</a>
+      </h2>
+
+      <ul class="info">
+        <li class="date">{{article.publication_date}}</li>
+        <li class="hourCreate">{{article.createdAt}}</li>
+        <li class="hourUpdate">{{article.updatedAt}}</li>
+      </ul>
+
+      <span class="itemDescription">{{article.description}}</span>
+
+      <!--Tags in item of news-->
+      <div class="tagSet" ng-repeat="tag in article.tags">
+
+        <!--Single tag-->
+        <div class="tag">
+          <div class="tagContent">
+            <p class="tagName">{{tag.name}}</p>
+            <sup><i class="fa fa-times" aria-hidden="true"></i> </sup>
+          </div>
+        </div> <!-- End tag-->
+      </div> <!--  End tagSet-->
+
+      <input class="tag newTag" type="text" ng-maxlength="60" name="tag" ng-model="ctr.addTagForms[$index].name">
+      <input id="addBtn" name="add" value="+" type="submit" ng-click="ctr.addTag(article, ctr.addTagForms[$index].name)">
+
+    </div> <!-- End itemContent-->
+</div> <!-- End newsChannel-->
