--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,8 +30,11 @@
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/colors.css">
     <link rel="stylesheet" href="/styles/font-awesome.min.css">
+    <link rel="stylesheet" href="/styles/fonts.css">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <!--STYLES END-->
   </head>
 
@@ -113,6 +116,7 @@
     <script src="/js/controllers/HeaderCtrl.js"></script>
     <script src="/js/controllers/IndexCtrl.js"></script>
     <script src="/js/controllers/NewsCtrl.js"></script>
+    <script src="/js/controllers/SourceCtrl.js"></script>
     <script src="/js/controllers/UserCtrl.js"></script>
     <script src="/js/services/Api.service.js"></script>
     <script src="/js/services/User.service.js"></script>
