implemented api for getting user tags

--- a/www/templates/news.tpl.html
+++ b/www/templates/news.tpl.html
@@ -9,9 +9,9 @@
       </h2>
 
       <ul class="info">
-        <li class="date">{{article.publication_date | date:'medium'}}</li>
-        <li class="hourCreate">{{article.createdAt | date:'medium'}}</li>
-        <li class="hourUpdate">{{article.updatedAt | date:'medium'}}</li>
+        <li class="date">{{article.publication_date}}</li>
+        <li class="hourCreate">{{article.createdAt}}</li>
+        <li class="hourUpdate">{{article.updatedAt}}</li>
       </ul>
 
       <span class="itemDescription">{{article.description}}</span>
