--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -116,6 +116,7 @@
     <script src="/js/controllers/HeaderCtrl.js"></script>
     <script src="/js/controllers/IndexCtrl.js"></script>
     <script src="/js/controllers/NewsCtrl.js"></script>
+    <script src="/js/controllers/SidebarCtrl.js"></script>
     <script src="/js/controllers/SourceCtrl.js"></script>
     <script src="/js/controllers/UserCtrl.js"></script>
     <script src="/js/services/Api.service.js"></script>
