--- a/assets/templates/news.tpl.html
+++ b/assets/templates/news.tpl.html
@@ -1,6 +1,21 @@
 <div>
+  <input type="text" ng-model="ctr.selectedTag" placeholder="Locations loaded via $http" uib-typeahead="tag.name for tag in ctr.getTags($viewValue)" typeahead-on-select="ctr.onTagSelect($item, $model, $label)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
+
+  <div class="tagSet" ng-repeat="tag in ctr.searchObj.tags">
+
+    <!--Single tag-->
+    <div class="tag">
+      <div class="tagContent">
+        <p class="tagName">{{tag.name}}</p>
+        <sup ng-click="ctr.onTagRemoveFromSearch(tag, $index)"><i class="fa fa-times" aria-hidden="true"></i> </sup>
+      </div>
+    </div> <!-- End tag-->
+  </div> <!--  End tagSet-->
+
+<div>
   <button ng-click="ctr.refreshNews()">Refresh</button>
 </div>
+<span ng-show="ctr.articles.length == 0">No results</span>
 <div class="newsChannel" ng-repeat="article in ctr.articles">
 
     <div class="itemContent col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
