implemented retry on login

--- a/assets/templates/login.html
+++ b/assets/templates/login.html
@@ -33,6 +33,7 @@
         <span>Don't have an account? </span>
         <a class="link-login" ui-sref="app.register">Get started</a>
       </footer>
+      <div ng-show="ctr.error">{{ctr.error}}</div>
 
     </form>
   </div>
