--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -120,6 +120,7 @@
     <script src="/js/controllers/SourceCtrl.js"></script>
     <script src="/js/controllers/UserCtrl.js"></script>
     <script src="/js/services/Api.service.js"></script>
+    <script src="/js/services/Modal.service.js"></script>
     <script src="/js/services/User.service.js"></script>
     <!--SCRIPTS END-->
   </body>
