--- a/assets/styles/colors.css
+++ b/assets/styles/colors.css
@@ -9,6 +9,8 @@
   --pale-orange: #ffcb03;
   --orange: #f69833;
   --light-orange: #fdbd39;
+  --light-orange-70pc: rgba(253, 189, 57, 0.7);
+
   --peach: #ee6723;
   --peach-70pc: rgba(238, 103, 35, 0.7);
   --peach-85pc: rgba(238, 103, 35, 0.85);
@@ -17,14 +19,17 @@
   --light-green: #c8cf2d;
   --light-green-30pc: rgba(200, 207, 45, 0.3);
   --light-green-50pc: rgba(200, 207, 45, 0.5);
+  --light-green-70pc: rgba(200, 207, 45, 0.7);
 
   --turquoise: #0dcfda;
   --turquoise-15pc: rgba(13, 207, 218, 0.15);
   --turquoise-30pc: rgba(13, 207, 218, 0.3);
+  --turquoise-70pc: rgba(13, 207, 218, 0.7);
 
   --cornflower-blue: #419bf9;
   --cornflower-blue-20pc: rgba(65, 154, 249, 0.2);
   --cornflower-blue-50pc: rgba(65, 154, 249, 0.5);
+  --cornflower-blue-70pc: rgba(65, 154, 249, 0.7);
   --cornflower-blue-15pc: rgba(65, 154, 249, 0.15);
 
   --whitey: #f2f2f2;
