--- a/assets/templates/news.tpl.html
+++ b/assets/templates/news.tpl.html
@@ -1,5 +1,20 @@
-<div>
-  <input type="text" ng-model="ctr.selectedTag" placeholder="Locations loaded via $http" uib-typeahead="tag.name for tag in ctr.getTags($viewValue)" typeahead-on-select="ctr.onTagSelect($item, $model, $label)" typeahead-loading="loadingLocations" typeahead-no-results="noResults" class="form-control">
+<div class="myContainer container">
+
+  <div class="searchForm">
+    <div class="row">
+      <div id="search">
+        <label for="search-input">
+          <i class="fa fa-search" aria-hidden="true"></i>
+          <span class="sr-only">Search news</span>
+        </label>
+        <input type="text" ng-model="ctr.selectedTag" id="search-input"
+               uib-typeahead="tag.name for tag in ctr.getTags($viewValue)"
+               typeahead-on-select="ctr.onTagSelect($item, $model, $label)"
+               typeahead-loading="loadingLocations"class="form-control input-lg"
+               typeahead-no-results="noResults" placeholder="Search news" tabindex="1"/>
+      </div>
+    </div>
+  </div>
 
   <div class="tagSet" ng-repeat="tag in ctr.searchObj.tags">
 
@@ -12,11 +27,20 @@
     </div> <!-- End tag-->
   </div> <!--  End tagSet-->
 
-<div>
-  <button ng-click="ctr.refreshNews()">Refresh</button>
-</div>
-<span ng-show="ctr.articles.length == 0">No results</span>
-<div class="newsChannel" ng-repeat="article in ctr.articles">
+  <div class="blockRefresh">
+      <button class="btnRefresh btn btn-lg" ng-click="ctr.refreshNews()">
+        <i class="fa fa-refresh" aria-hidden="true"></i> Refresh
+      </button>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <span ng-show="ctr.articles.length == 0">No results</span>
+      </div>
+    </div>
+  </div>
+
+  <!--NEWS CHANNEL-->
+  <div class="newsChannel" ng-repeat="article in ctr.articles">
 
     <div class="itemContent col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
       <h2 class="itemTitle">
@@ -47,4 +71,5 @@
       <input id="addBtn" name="add" value="+" type="submit" ng-click="ctr.addTag(article, ctr.addTagForms[$index].name)">
 
     </div> <!-- End itemContent-->
-</div> <!-- End newsChannel-->
+  </div> <!-- End newsChannel-->
+</div>
