changed back port number

--- a/assets/templates/news.tpl.html
+++ b/assets/templates/news.tpl.html
@@ -49,8 +49,8 @@
 
       <ul class="info">
         <li class="date">{{article.publication_date | date:'medium'}}</li>
-        <li class="hourCreate">{{article.createdAt | date:'medium'}}</li>
-        <li class="hourUpdate">{{article.updatedAt | date:'medium'}}</li>
+        <!-- <li class="hourCreate">{{article.createdAt | date:'medium'}}</li>
+        <li class="hourUpdate">{{article.updatedAt | date:'medium'}}</li> -->
       </ul>
 
       <span class="itemDescription">{{article.description}}</span>
